# piaic_ass

Assignment3/budgetbuddy/: budgetbuddy.py  output.md  pyproject.toml
Assignment3/budgetbuddy/src/budgetbuddy/: __init__.py
Assignment4/chainlit-agent/: chatbot.py  my_secrets.py  pyproject.toml
