[project]
name = "budgetbuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mubeen", email = "mubeenfatima@proton.me" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.15",
]

[project.scripts]
budgetbuddy = "budgetbuddy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
